<resources>
    <string name="app_name">Machine learning based application for forecasting Movies TV series success</string>
    <string name="app_real_name"></string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_complain_here">Enter your Complain here</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    　　　
    <string name="close">Close</string>


    <string name="simple_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </string>


    <string name="simple_topactortext">Top Actor:-Name1,Name2</string>

    <string name="rating">Rating:-5.0</string>

    <string name="destiny">Movie or TV Show</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome User!</string>
    <string name="slide_1_desc">The next generation app to predict Movie/TV show Success and watch them all in one place!</string>

    <string name="slide_2_title">Prediction!</string>
    <string name="slide_2_desc">You can predict Movie/Tv Show whether it flop or will hit in future and then save that predictions!</string>

    <string name="slide_3_title">Watch Movie/TV Show!</string>
    <string name="slide_3_desc">You can watch trailers and whole of Movie/TV Show in best video player and best interface!</string>

    <string name="slide_4_title">Home Screen!</string>
    <string name="slide_4_desc">You can navigate from one screen to other by side nav,buttons and Home Screen!</string>


    <string name="slide_5_title">Manage!</string>
    <string name="slide_5_desc">You can manage your profile,change setting,rate,complain,help access, get Notification updates and much more all in one place.For use all this usefull features First you need to login!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="splashtext">Machine learning based application for forecasting Movies TV series success</string>

    <string name="helptext1">(1)    Hi you can improve prediction by making good quality content</string>

    <string name="helptext2">(2)    Save Prediction can be done as a record </string>

    <string name="helptext3">(3)   In Future we can update you through notifications</string>

    <string name="helptext4">(4)    Your feedback related to our app help us knowing what to improve</string>

    <string name="helptext5">(5)    Please donot share your account info and unique id keys to stay safe</string>




</resources>