<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:context=".HelpScreenAdmin">


    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ImageView
            android:id="@+id/wal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/back_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintWidth_percent="0.7"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">




        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Help"
            android:textSize="50dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#FFAA00"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"


            ></TextView>



        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="#D5FFFFFF"
            app:layout_constraintVertical_bias="0.50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.58"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.95"
            >




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"

                android:orientation="vertical">







                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">






                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/helptext1"
                            android:textSize="20dp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"></TextView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/helptext2"
                            android:textSize="20dp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="35dp"></TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/helptext3"
                            android:textSize="20dp"
                            android:gravity="center"
                            android:layout_gravity="center"


                            android:textColor="@color/black"
                            android:layout_marginTop="35dp"></TextView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/helptext4"
                            android:textSize="20dp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="35dp"></TextView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/helptext5"
                            android:textSize="20dp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:layout_marginTop="50dp"></TextView>





                    </LinearLayout>
                </ScrollView>

            </RelativeLayout>



        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/back_style_down"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintWidth_percent="0.7"

            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintVertical_bias="0">
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <include
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        layout="@layout/content_main"/>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navmenu"
        app:menu="@menu/iconmenuadmin"
        app:headerLayout="@layout/navheaderadmin"
        android:layout_gravity="start"/>


</androidx.drawerlayout.widget.DrawerLayout>